--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,12 +5,13 @@ pydantic>=2.9.2
 python-multipart==0.0.9
 
 # Data processing and ML
-numpy==2.3.3
-pandas==2.3.3
-scikit-learn==1.7.2
-scipy==1.16.2
-imbalanced-learn==0.11.0
+numpy==2.2.3
+pandas==2.2.3
+scikit-learn==1.6.1
+scipy==1.15.2
+imbalanced-learn==0.12.4
 joblib==1.5.2
+xgboost==2.0.3
 
 # Model Explainability
 shap==0.43.0
