--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,11 @@ xgboost==2.0.3
 # Model Explainability
 shap==0.43.0
 
+# Visualization and Analysis (for EDA and training scripts)
+matplotlib>=3.6.0
+seaborn>=0.12.0
+missingno>=0.5.0
+
 # Utils
 python-dotenv==1.0.0
 pyyaml==6.0.1  # requerimientos del backend
