--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -40,4 +40,4 @@ USER appuser
 EXPOSE 8000
 
 # Comando para ejecutar la aplicación FastAPI
-#CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "backend.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
